test/src/e2e_vm_tests/test_programs/should_fail/array_oob_const_index/stdout.snap
---
source: test/src/snapshot/mod.rs
---
> forc test --path test/src/e2e_vm_tests/test_programs/should_fail/array_oob_const_index --release
exit status: 1
output:
    Building test/src/e2e_vm_tests/test_programs/should_fail/array_oob_const_index
   Compiling library array_oob_const_index (test/src/e2e_vm_tests/test_programs/should_fail/array_oob_const_index)
error
 --> test/src/e2e_vm_tests/test_programs/should_fail/array_oob_const_index/src/main.sw:5:9
  |
3 | fn literal_index() -> u64 {
4 |     let ary = [1, 2, 3];
5 |     ary[4]
  |         ^ Index out of bounds; the length is 3 but the index is 4.
6 | }
7 | 
  |
____

error
  --> test/src/e2e_vm_tests/test_programs/should_fail/array_oob_const_index/src/main.sw:11:9
   |
 9 | fn literal_index_const_generic<const N: u64>() -> u64 {
10 |     let ary = [1; N];
11 |     ary[4] // THIS SHOULD NOT EMIT OUT-OF-BOUNDS-ERROR.
   |         ^ Index out of bounds; the length is 0 but the index is 4.
12 | }
13 | 
   |
____

error
  --> test/src/e2e_vm_tests/test_programs/should_fail/array_oob_const_index/src/main.sw:18:9
   |
16 | fn global_const_index() -> u64 {
17 |     let ary = [1, 2, 3];
18 |     ary[GLOBAL_I]
   |         ^^^^^^^^ Index out of bounds; the length is 3 but the index is 4.
19 | }
20 | 
   |
____

error
  --> test/src/e2e_vm_tests/test_programs/should_fail/array_oob_const_index/src/main.sw:24:9
   |
22 | fn global_const_index_const_generic<const N: u64>() -> u64 {
23 |     let ary = [1; N];
24 |     ary[GLOBAL_I] // THIS SHOULD NOT EMIT OUT-OF-BOUNDS-ERROR.
   |         ^^^^^^^^ Index out of bounds; the length is 0 but the index is 4.
25 | }
26 | 
   |
____

error
  --> test/src/e2e_vm_tests/test_programs/should_fail/array_oob_const_index/src/main.sw:30:9
   |
28 |     const LOCAL_I: u64 = 4;
29 |     let ary = [1, 2, 3];
30 |     ary[LOCAL_I]
   |         ^^^^^^^ Index out of bounds; the length is 3 but the index is 4.
31 | }
32 | 
   |
____

error
  --> test/src/e2e_vm_tests/test_programs/should_fail/array_oob_const_index/src/main.sw:37:9
   |
35 |     const LOCAL_I: u64 = 4;
36 |     let ary = [1; N];
37 |     ary[LOCAL_I] // THIS SHOULD NOT EMIT OUT-OF-BOUNDS-ERROR.
   |         ^^^^^^^ Index out of bounds; the length is 0 but the index is 4.
38 | }
39 | 
   |
____

  Aborting due to 6 errors.
error: Failed to compile array_oob_const_index
